tests/fail/print_empty_stack.avm
; print on an empty stack
print
